<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:scrollbars="none"
    tools:context=".SettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_main">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:background="@color/colorPrimary"
            android:id="@+id/layout_general">

            <TextView
                android:id="@+id/tv_general"
                android:text="@string/general"
                style="@style/text_view" />

            <TextView

                android:id="@+id/tv_gen1"
                android:text="@string/limit_mobile_data_usage"
                android:layout_below="@+id/tv_general"
                android:layout_marginTop="20dp"
                style="@style/text"
                android:textSize="19dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_gen2"
                android:text="@string/ony_stream_hd_video_on_wi_fi"
                android:layout_below="@id/tv_gen1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="14dp"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ch_gen1"
                android:buttonTint="@color/colorPrimaryDark"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="60dp"/>

            <TextView
                android:id="@+id/tv_gensecond"
                android:text="@string/background_playback_on"
                android:layout_below="@+id/tv_gen2"
                android:layout_marginTop="20dp"
                style="@style/text"
                android:textSize="19dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_gensecond3"
                android:text="@string/allow_video_and_audio_to_play_while_your_device_is_locked_or_app_is_closed"
                android:layout_below="@id/tv_gensecond"
                android:layout_marginRight="70dp"
                android:paddingBottom="10dp"
                android:inputType="textMultiLine"
                android:layout_marginLeft="15dp"
                android:textSize="14dp"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ch_gen2"
                android:layout_below="@id/ch_gen1"
                android:buttonTint="@color/colorPrimaryDark"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="15dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_notify"
            android:layout_below="@id/layout_general"
            android:layout_marginBottom="7dp"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/tv_notify"
                android:text="@string/notifications"
                style="@style/text_view"/>

            <TextView
                android:id="@+id/tv_n1"
                android:text="@string/limit_mobile_data_usage"
                android:layout_below="@+id/tv_notify"
                android:layout_marginTop="20dp"
                android:textSize="19dp"
                style="@style/text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_n2"
                android:text="@string/notify_me_when_new_talks_are_available"
                android:layout_below="@id/tv_n1"
                android:textSize="14dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ch_notify1"
                android:buttonTint="@color/colorPrimaryDark"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="15dp"/>

            <TextView
                android:id="@+id/tv_n3"
                android:text="@string/recomended_talks"
                android:layout_below="@+id/tv_n2"
                android:layout_marginTop="20dp"
                android:textSize="19dp"
                style="@style/text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_n4"
                android:text="@string/notify_me_of_talks_i_may_like"
                android:layout_below="@id/tv_n3"
                android:layout_marginRight="55dp"
                android:paddingBottom="10dp"
                android:textSize="14dp"
                android:layout_marginLeft="15dp" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ch_notify2"
                android:layout_below="@id/ch_notify1"
                android:buttonTint="@color/colorPrimaryDark"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="15dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_language"
            android:layout_below="@id/layout_notify"
            android:layout_marginBottom="7dp"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/tv_lang"
                android:text="@string/language"
                style="@style/text_view"/>

            <TextView
                android:id="@+id/tv_l1"
                android:text="@string/app_language"
                android:layout_below="@+id/tv_lang"
                android:layout_marginTop="20dp"
                android:textSize="19dp"
                style="@style/text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_l2"
                android:text="@string/system_default"
                android:layout_below="@id/tv_l1"
                android:textSize="14dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>


            <TextView
                android:id="@+id/tv_l3"
                android:text="Subtitle language"
                android:layout_below="@+id/tv_l2"
                android:layout_marginTop="20dp"
                android:textSize="19dp"
                style="@style/text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_l4"
                android:text="@string/no_subtitles"
                android:layout_below="@id/tv_l3"
                android:layout_marginRight="55dp"
                android:layout_marginLeft="15dp"
                android:paddingBottom="10dp"
                android:textSize="14dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_download"
            android:layout_below="@id/layout_language"
            android:layout_marginBottom="7dp"
            android:background="@color/colorPrimary">

            <TextView

                android:id="@+id/tv_down"
                android:text="@string/downloads"
                android:textSize="15dp"
                style="@style/text_view"/>

            <TextView

                android:id="@+id/tv_d1"
                android:text="@string/add_over_wi_fi_only"
                android:layout_below="@+id/tv_down"
                android:layout_marginTop="20dp"
                android:textSize="19dp"
                style="@style/text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_d2"
                android:text="@string/only_download_over_wi_fi"
                android:layout_below="@id/tv_d1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="14dp"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ch_down"
                android:buttonTint="@color/colorPrimaryDark"
                android:layout_marginLeft="300dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="60dp"/>

            <TextView
                android:id="@+id/tv_d3"
                android:text="@string/quality"
                android:layout_below="@+id/tv_d2"
                android:layout_marginTop="20dp"
                android:textSize="19dp"
                style="@style/text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_d4"
                android:text="@string/ask_each_time"
                android:layout_below="@id/tv_d3"
                android:layout_marginRight="55dp"
                android:layout_marginLeft="15dp"
                android:textSize="14dp"/>

            <TextView

                android:id="@+id/tv_d5"
                android:text="@string/save_location"
                android:layout_below="@+id/tv_d4"
                android:layout_marginTop="20dp"
                android:textSize="19dp"
                style="@style/text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_d6"
                android:text="@string/internal_storage"
                android:layout_below="@id/tv_d5"
                android:layout_marginRight="55dp"
                android:layout_marginLeft="15dp"
                android:paddingBottom="10dp"
                android:textSize="14dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_privacy"
            android:layout_below="@id/layout_download"
            android:layout_marginBottom="7dp"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/tv_priv"
                android:text="@string/privacy"
                style="@style/text_view"/>

            <TextView

                android:id="@+id/tv_p1"
                android:text="@string/clear_watch_hiatory"
                android:layout_below="@+id/tv_priv"
                android:layout_marginTop="20dp"
                android:textSize="19dp"
                style="@style/text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_p2"
                android:text="@string/clear_watch_history_from_this_device"
                android:layout_below="@id/tv_p1"
                android:textSize="14dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:paddingBottom="10dp"/>


            <TextView

                android:id="@+id/tv_p3"
                android:text="@string/clear_search_history"
                android:layout_below="@+id/tv_p2"
                android:layout_marginTop="20dp"
                android:textSize="19dp"
                style="@style/text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_p4"
                android:text="@string/clear_search_history_from_this_device"
                android:layout_below="@id/tv_p3"
                android:layout_marginRight="55dp"
                android:layout_marginLeft="15dp"
                android:textSize="14dp"
                android:paddingBottom="10dp"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_about"
            android:layout_below="@id/layout_privacy"
            android:layout_marginBottom="7dp"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/tv_about"
                android:text="@string/about"
                style="@style/text_view"/>

            <TextView

                android:id="@+id/tv_a1"
                android:text="@string/liscenses"
                android:layout_below="@+id/tv_about"
                android:layout_marginTop="20dp"
                android:textSize="19dp"
                style="@style/text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_a2"
                android:text="@string/liscense_details_for_open_source_software"
                android:layout_below="@id/tv_a1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="14dp"/>


            <TextView
                android:id="@+id/tv_a3"
                android:text="@string/transaction_credits"
                android:layout_below="@+id/tv_a2"
                android:layout_marginTop="20dp"
                android:textSize="19dp"
                style="@style/text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_a4"
                android:text="@string/credit_details_for_talk_transactions"
                android:layout_below="@id/tv_a3"
                android:layout_marginRight="55dp"
                android:layout_marginLeft="15dp"
                android:textSize="14dp"/>

            <TextView
                android:id="@+id/tv_a5"
                android:text="@string/about_ted"
                android:layout_below="@+id/tv_a4"
                android:layout_marginTop="20dp"
                android:textSize="19dp"
                style="@style/text"/>

            <TextView
                android:id="@+id/tv_a6"
                android:text="@string/build_version"
                android:layout_below="@+id/tv_a5"
                android:layout_marginTop="20dp"
                android:textSize="19dp"
                style="@style/text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_a7"
                android:layout_marginLeft="15dp"
                android:text="@string/_3_2_2"
                android:layout_below="@id/tv_a6"
                android:layout_marginRight="55dp"
                android:textSize="14dp"
                android:layout_marginBottom="10dp"/>

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>