<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="horizontal">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="#000000"
        android:id="@+id/tv_ss"
        android:text="@string/you_want_to_see_something"
        android:textSize="20dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_ss"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="15dp"
        android:id="@+id/tv_cou"
        android:text="@string/courageous"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_cou"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="15dp"
        android:layout_marginTop="20dp"
        android:id="@+id/tv_funny"
        android:text="@string/funny"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_funny"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="15dp"
        android:gravity="center"
        android:id="@+id/tv_Persuasive"
        android:text="@string/persuasive"
        android:textColor="@color/colorPrimaryDark" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/tv_Persuasive"
        android:textSize="15dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:id="@+id/tv_ing"
        android:text="@string/ingenious"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_ing"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:id="@+id/tv_jaw"
        android:text="@string/jaw_dropping"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_below="@id/tv_jaw"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/tv_bu"
        android:text="@string/beautiful"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/tv_bu"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:id="@+id/tv_fasc"
        android:text="@string/fascinating"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_fasc"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/tv_info"
        android:textSize="15dp"
        android:text="@string/informative"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/tv_insp"
        android:layout_below="@id/tv_info"
        android:text="@string/inspiring"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="15dp"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark" />


</RelativeLayout>